<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ConfirmDeleteFragment">

    <TextView
        android:id="@+id/confirmDeleteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Deletion?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/vRed"
        android:text="Back"
        app:layout_constraintEnd_toStartOf="@+id/confirmDeleteView"
        app:layout_constraintTop_toBottomOf="@+id/confirmDeleteView" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/vRed"
        android:text="Delete"
        app:layout_constraintStart_toEndOf="@+id/confirmDeleteView"
        app:layout_constraintTop_toBottomOf="@+id/confirmDeleteView" />
</androidx.constraintlayout.widget.ConstraintLayout>