...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black">

            <Button
                android:id="@+id/accountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Account"
                android:backgroundTint="@color/vRed"/>

...
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/black"
            android:orientation="horizontal">

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/vRed"
                android:text="Home" />

...
