...
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/vRed"
                android:text="Back" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/vRed"
                android:text="Logout" />
        </LinearLayout>
...
